--- a/.gitignore
+++ b/.gitignore
@@ -1,52 +1,19 @@
-# Prerequisites
-*.d
+*.class
 
-# Object files
-*.o
-*.ko
-*.obj
-*.elf
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
 
-# Linker output
-*.ilk
-*.map
-*.exp
+# Package Files #
+*.jar
+*.war
+*.ear
 
-# Precompiled Headers
-*.gch
-*.pch
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
 
-# Libraries
-*.lib
-*.a
-*.la
-*.lo
+# maven
+target
 
-# Shared objects (inc. Windows DLLs)
-*.dll
-*.so
-*.so.*
-*.dylib
-
-# Executables
-*.exe
-*.out
-*.app
-*.i*86
-*.x86_64
-*.hex
-
-# Debug files
-*.dSYM/
-*.su
-*.idb
-*.pdb
-
-# Kernel Module Compile Results
-*.mod*
-*.cmd
-.tmp_versions/
-modules.order
-Module.symvers
-Mkfile.old
-dkms.conf
+# idea
+.idea
+*.i??
