First complete demo with services and pipelines

--- a/bookstore-chart/templates/pipeline-books-api-pvc.yaml
+++ b/bookstore-chart/templates/pipeline-books-api-pvc.yaml
@@ -1,11 +1,11 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: bookstore-build-pvc
+  name: books-api-pipeline-pvc
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 200Mi
+      storage: 100Mi
   volumeMode: Filesystem
